# mcl

./: .env.example  .gitignore  DESIGN.md  PLAN.md  RUNNING.txt  pyproject.toml  railway.toml  requirements.txt  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-azure-backend.yml
docs/: BUGS.md  SECURITY-CHECKLIST.md  design-system.md
docs/deployment/: azure-backend-cicd.md
docs/specs/: BUSINESS-LOGIC-GAPS.md  CONSISTENCY-REVIEW-REPORT.md  DESIGN-GAP-ANALYSIS.md  DESIGN.md  GAP-ANALYSIS.md  GAP-RESOLUTION-TRACKER.md  GAP-RESOLUTION-VERIFICATION.md  IMPLEMENTATION-PLAN-GAP-ANALYSIS.md  IMPLEMENTATION-PLAN.md  PRD-GAP-ANALYSIS.md  PRD.md  UX-GAP-ANALYSIS.md  tryholo-inspired-redesign-plan.md
infra/: docker-compose.yml
infra/azure/: deploy-backend-container-apps.sh
phases/0-project-scaffolding/: 0.1-Initialize-Monorepo-Root.md  0.2-Pipeline-Package-Scaffold.md  0.3-API-Package-Scaffold.md  0.4-Web-App-Scaffold.md  0.5-Worker-Package-Scaffold.md  0.6-CLI-Package-Scaffold.md  0.7-Docker-Compose.md  0.8-Supabase-Project-Init.md  0.9-CI-CD-Pipeline.md
phases/1-pipeline-package/: 1.0-PipelineConfig-Dependency-Injection.md  1.1-Pydantic-Schema-Models.md  1.2-Channel-Plugin-Architecture.md  1.3-Port-Scoring-Engine.md  1.4-Port-Recon-Modules.md  1.5-Redis-Based-Transcript-Cache.md  1.6-Port-Prompt-Templates.md  1.7-Copy-Seed-Data.md  1.8-Unit-Tests.md
phases/2-database-and-auth/: 2.1-Database-Schema.md  2.2-RLS-Policies.md  2.3-Seed-Data.md
phases/3-fastapi-backend/: 3.1-Dependency-Injection.md  3.2-Auth-Middleware.md  (+5 more)
(+52 files in other folders)
