[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcl-monorepo"
version = "0.1.0"
description = "Influence Pirates monorepo"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.isort]
known-first-party = ["mcl_pipeline", "mcl_cli"]

[tool.pytest.ini_options]
testpaths = ["packages/pipeline/tests", "packages/api/tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
